--- a/MagnusIAS4/app/src/main/AndroidManifest.xml
+++ b/MagnusIAS4/app/src/main/AndroidManifest.xml
@@ -35,7 +35,12 @@
             android:name=".ResourceContent"
             android:label="@string/title_activity_resource_content"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ExamActivity"
+
+           >
+
+        </activity>
     </application>
 
 </manifest>
