--- a/MagnusIAS4/app/build.gradle
+++ b/MagnusIAS4/app/build.gradle
@@ -20,11 +20,11 @@ android {
         applicationId "magnus.example.com.magnusias4"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 9
-        versionName '0.0'
+        versionCode 20
+        versionName '0.20'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.free
-        versionNameSuffix '.0'
+        versionNameSuffix '.20'
     }
     buildTypes {
         release {
@@ -53,6 +53,7 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    implementation 'com.joanzapata.pdfview:android-pdfview:1.0.4@aar'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
