--- a/MagnusIAS4/app/src/main/AndroidManifest.xml
+++ b/MagnusIAS4/app/src/main/AndroidManifest.xml
@@ -7,15 +7,25 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="nosensor"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".FrontPage"
@@ -37,10 +47,26 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="nosensor"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ExamActivity" />
-        <activity android:name=".VideoAcitvity" />
-        <activity android:name=".RandomTestActivity"></activity>
+        <activity android:name=".ExamActivity"
+            />
+        <activity android:name=".VideoAcitvity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".RandomTestActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".OfflinePlayerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+<!--
+        android:configChanges="orientation|keyboardHidden"
+        android:screenOrientation="landscape"
+-->
+
+        <activity android:name="magnus.example.com.magnusias4.AnswerPDF"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
     </application>
 
 </manifest>
